# referral_db

./: .gitignore  clean_to_file.ipynb  pyproject.toml  readme.md
src/: clean_to_file.ipynb  instructions.md  jupysql.ipynb  sql_analysis.sql
src/queries/: bi_referrals.sql
src/queries/create_tables/: coc.sql  hcpcs.sql  health_plan.sql  icd10cm.sql  referrals.sql  user_list.sql
src/queries/datalake/: coc.sql
