[tool.poetry]
name = "referral_db"
version = "0.1.0"
description = ""
authors = ["lynma01 <lynma01@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
duckdb = "^0.7.1"
duckdb-engine = "^0.7.0"
pyarrow = "^14.0.1"
jupysql = "^0.6.6"
ipython = "^8.11.0"
openpyxl = "^3.1.2"
polars = "^0.16.16"
xlsx2csv = "^0.8.1"
prefect = "^2.82"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
